--- a/assets/_fonts.scss
+++ b/assets/_fonts.scss
@@ -1,39 +1,67 @@
-/* roboto-regular - latin */
 @font-face {
-  font-family: 'Roboto';
-  font-style: normal;
+  font-family: 'Inter UI';
+  font-style:  normal;
   font-weight: 400;
-  font-display: swap;
-  src: local(''),
-       url('fonts/roboto-v27-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('fonts/roboto-v27-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  src: url("fonts/Inter-UI-Regular.woff2") format("woff2"),
+       url("fonts/Inter-UI-Regular.woff") format("woff");
 }
-/* roboto-700 - latin */
 @font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: local(''),
-       url('fonts/roboto-v27-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('fonts/roboto-v27-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  font-family: 'Inter UI';
+  font-style:  italic;
+  font-weight: 400;
+  src: url("fonts/Inter-UI-Italic.woff2") format("woff2"),
+       url("fonts/Inter-UI-Italic.woff") format("woff");
 }
 
-/* roboto-mono-regular - latin */
 @font-face {
-  font-family: 'Roboto Mono';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local(''),
-       url('fonts/roboto-mono-v13-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-       url('fonts/roboto-mono-v13-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  font-family: 'Inter UI';
+  font-style:  normal;
+  font-weight: 500;
+  src: url("fonts/Inter-UI-Medium.woff2") format("woff2"),
+       url("fonts/Inter-UI-Medium.woff") format("woff");
+}
+@font-face {
+  font-family: 'Inter UI';
+  font-style:  italic;
+  font-weight: 500;
+  src: url("fonts/Inter-UI-MediumItalic.woff2") format("woff2"),
+       url("fonts/Inter-UI-MediumItalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Inter UI';
+  font-style:  normal;
+  font-weight: 700;
+  src: url("fonts/Inter-UI-Bold.woff2") format("woff2"),
+       url("fonts/Inter-UI-Bold.woff") format("woff");
+}
+@font-face {
+  font-family: 'Inter UI';
+  font-style:  italic;
+  font-weight: 700;
+  src: url("fonts/Inter-UI-BoldItalic.woff2") format("woff2"),
+       url("fonts/Inter-UI-BoldItalic.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Inter UI';
+  font-style:  normal;
+  font-weight: 900;
+  src: url("fonts/Inter-UI-Black.woff2") format("woff2"),
+       url("fonts/Inter-UI-Black.woff") format("woff");
+}
+@font-face {
+  font-family: 'Inter UI';
+  font-style:  italic;
+  font-weight: 900;
+  src: url("fonts/Inter-UI-BlackItalic.woff2") format("woff2"),
+       url("fonts/Inter-UI-BlackItalic.woff") format("woff");
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Inter UI', sans-serif;
 }
 
 code {
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Iosevka', monospace;
 }
