--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,6 +7,49 @@
 <body dir="{{ default "ltr" .Site.Language.LanguageDirection }}">
   <input type="checkbox" class="hidden toggle" id="menu-control" />
   <input type="checkbox" class="hidden toggle" id="toc-control" />
+  <div class="dcl navbar fullscreen" role="navigation">
+    <div class="ui container">
+      <div class="dcl navbar-menu">
+        <div class="ui secondary stackable menu">
+          <a class="dcl navbar-logo" href="https://decentraland.org">
+            <i class="dcl logo"></i>
+          </a>
+          <a href="https://market.decentraland.org" class="item">Marketplace</a>
+          <a href="https://builder.decentraland.org" class="item">Builder</a>
+          <a href="https://docs.decentraland.org" class="active item">Docs</a>
+          <a href="https://events.decentraland.org" class="item">Events</a>
+          <a href="https://dao.decentraland.org" class="item">DAO</a>
+          <a href="https://decentraland.org/blog" class="item">Blog</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="tabs-header">
+    <div class="dcl tabs ">
+      <div class="ui container">
+        {{ range $.Site.Data.sections }}
+          <div class="dcl tab active"
+          {{if (not (eq .path $.Section)) }}style="border-color: transparent"{{end}}
+          >
+            <a aria-current="page" class="tabs-navigation" href="/{{.path}}"
+            >{{.name}}</a>
+            {{if (eq .path $.Section) }}
+              <div class="active-bar" style="border-color: {{.accent}};"></div>
+              <style>
+                :root {
+                  --primary: {{.accent}};
+                }
+              </style>
+            {{end}}
+          </div>
+        {{ end }}
+        {{ partial "docs/search" . }}
+      </div>
+    </div>
+
+    </div>
+    </div>
+    </div>
   <main class="container flex">
     <aside class="book-menu">
       <div class="book-menu-content">
@@ -30,7 +73,9 @@
 
       {{ template "comments" . }} <!-- Comments block -->
 
-      <label for="menu-control" class="hidden book-menu-overlay"></label>
+      <label for="menu-control" class="hidden book-menu-overlay">
+
+      </label>
     </div>
 
     {{ if default true (default .Site.Params.BookToC .Params.BookToC) }}
@@ -74,6 +119,7 @@
 
 {{ define "main" }}
   <article class="markdown">
+    <h1>{{ partial "docs/title.html" . }}</h1>
     {{- .Content -}}
   </article>
 {{ end }}
