--- a/assets/_shortcodes.scss
+++ b/assets/_shortcodes.scss
@@ -59,9 +59,9 @@
     input[type="radio"]:checked + label + .book-tabs-content {
       display: block;
     }
-    input[type="radio"]:focus + label {
-      @include outline;
-    }
+    // input[type="radio"]:focus + label {
+    //   @include outline;
+    // }
   }
 
   // {{< columns >}}
