feat search box

--- a/layouts/partials/docs/search.html
+++ b/layouts/partials/docs/search.html
@@ -1,7 +1,12 @@
 {{ if default true .Site.Params.BookSearch }}
 <div class="book-search">
+  <div id="search-overlay" class="hidden"></div>
   <input type="text" id="book-search-input" placeholder="{{ i18n "Search" }}" aria-label="{{ i18n "Search" }}" maxlength="64" data-hotkeys="s/" />
   <div class="book-search-spinner hidden"></div>
-  <ul id="book-search-results"></ul>
+  <div id="book-search-results">
+    <div id="book-search-hits" class="hidden" tabindex="0">
+      <ul id="book-search-list"></ul>
+    </div>
+  </div>
 </div>
 {{ end }}
