--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,7 +24,44 @@
       </div>
     </div>
   </div>
-  <div class="tabs-header">
+
+  {{ if .IsHome }}
+  <div class="ui container">
+    <div class="home">
+      <div class="dcl section welcome-wrapper">
+        <h1 class="welcome-header">Decentraland Documentation</h1>
+        <p class="welcome-subheader">The first-ever virtual world owned by its users</p>
+      </div>
+      {{ partial "docs/search" . }}
+      <p class="welcome-description">
+        This site is maintained by the Decentraland Foundation.<br>
+        The content in this site is divided into sections for different user profiles. Choose a section that matches your needs.
+      </p>
+      <div class="section-cards-container">
+        {{ range $.Site.Data.sections }}
+          <div class="user-card" style="background: {{ .accent }}">
+            <a href="/{{.path}}">
+              <div class="card-img">
+                <img alt="{{.name}}" src="/{{.img}}" />
+              </div>
+              <div class="card-info">
+                <h3>For {{.name}}</h3>
+                <p>{{.description}}</p>
+              </div>
+              <div class="card-cta">
+                <span>VIEW MORE</span>
+                <img src="https://cdn.decentraland.org/@dcl/docs-site/1.0.0-3184947587.commit-74f4df1/caret.png" alt="View More"/>
+              </div>
+            </a>
+          </div>
+        {{end}}
+      </div>
+    </div>
+  </div>
+  {{end}}
+
+  {{ if not .IsHome }}
+  <div class="tabs-header}">
     <div class="dcl tabs ">
       <div class="ui container">
         {{ range $.Site.Data.sections }}
@@ -42,14 +79,11 @@
               </style>
             {{end}}
           </div>
-        {{ end }}
+          {{ end }}
         {{ partial "docs/search" . }}
       </div>
     </div>
-
-    </div>
-    </div>
-    </div>
+  </div>
   <main class="container flex">
     <aside class="book-menu">
       <div class="book-menu-content">
@@ -86,7 +120,7 @@
     </aside>
     {{ end }}
   </main>
-
+  {{ end }}
   {{ partial "docs/inject/body" . }}
 </body>
 </html>
