--- a/assets/_defaults.scss
+++ b/assets/_defaults.scss
@@ -30,6 +30,7 @@ $hint-colors: (
 
 // Themes
 @mixin theme-light {
+  --gray: #736e7d;
   --gray-100: #f8f9fa;
   --gray-200: #e9ecef;
   --gray-500: #adb5bd;
