fix responsive for mobile

--- a/assets/_home.scss
+++ b/assets/_home.scss
@@ -74,3 +74,19 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .home {
+    .book-search {
+      width: unset;
+    }
+
+    .section-cards-container {
+      flex-direction: column;
+    }
+
+    .user-card {
+      margin: 8px 0;
+    }
+  }
+}
