--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,42 +26,43 @@
   </div>
 
   {{ if .IsHome }}
-  <div class="ui container">
-    <div class="home">
-      <div class="dcl section welcome-wrapper">
-        <h1 class="welcome-header">Decentraland Documentation</h1>
-        <p class="welcome-subheader">The first-ever virtual world owned by its users</p>
-      </div>
-      {{ partial "docs/search" . }}
-      <p class="welcome-description">
-        This site is maintained by the Decentraland Foundation.<br>
-        The content in this site is divided into sections for different user profiles. Choose a section that matches your needs.
-      </p>
-      <div class="section-cards-container">
-        {{ range $.Site.Data.sections }}
-          <div class="user-card" style="background: {{ .accent }}">
-            <a href="/{{.path}}">
-              <div class="card-img">
-                <img alt="{{.name}}" src="/{{.img}}" />
-              </div>
-              <div class="card-info">
-                <h3>For {{.name}}</h3>
-                <p>{{.description}}</p>
-              </div>
-              <div class="card-cta">
-                <span>VIEW MORE</span>
-                <img src="https://cdn.decentraland.org/@dcl/docs-site/1.0.0-3184947587.commit-74f4df1/caret.png" alt="View More"/>
-              </div>
-            </a>
-          </div>
-        {{end}}
+  <main class="main-home">
+    <div class="ui container">
+      <div class="home">
+        <div class="dcl section welcome-wrapper">
+          <h1 class="welcome-header">Decentraland Documentation</h1>
+          <p class="welcome-subheader">The first-ever virtual world owned by its users</p>
+        </div>
+        {{ partial "docs/search" . }}
+        <p class="welcome-description">
+          This site is maintained by the Decentraland Foundation.<br>
+          The content in this site is divided into sections for different user profiles. Choose a section that matches your needs.
+        </p>
+        <div class="section-cards-container">
+          {{ range $.Site.Data.sections }}
+            <div class="user-card" style="background: {{ .accent }}">
+              <a href="/{{.path}}">
+                <div class="card-img">
+                  <img alt="{{.name}}" src="/{{.img}}" />
+                </div>
+                <div class="card-info">
+                  <h3>For {{.name}}</h3>
+                  <p>{{.description}}</p>
+                </div>
+                <div class="card-cta">
+                  <span>VIEW MORE</span>
+                  <img src="https://cdn.decentraland.org/@dcl/docs-site/1.0.0-3184947587.commit-74f4df1/caret.png" alt="View More"/>
+                </div>
+              </a>
+            </div>
+          {{end}}
+        </div>
       </div>
     </div>
-  </div>
   {{end}}
 
   {{ if not .IsHome }}
-  <div class="tabs-header}">
+  <div class="tabs-header">
     <div class="dcl tabs ">
       <div class="ui container">
         {{ range $.Site.Data.sections }}
@@ -107,9 +108,7 @@
 
       {{ template "comments" . }} <!-- Comments block -->
 
-      <label for="menu-control" class="hidden book-menu-overlay">
-
-      </label>
+      <label for="menu-control" class="hidden book-menu-overlay"></label>
     </div>
 
     {{ if default true (default .Site.Params.BookToC .Params.BookToC) }}
@@ -121,6 +120,7 @@
     {{ end }}
   </main>
   {{ end }}
+  {{ partial "docs/html-footer.html" . }}
   {{ partial "docs/inject/body" . }}
 </body>
 </html>
